# src/main/java/com/notifyme/delegate/UsuarioApiDelegateImpl.java
@@ -24,8 +24,16 @@ public class UsuarioApiDelegateImpl implements UsuarioApiDelegate {
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
-    @Override
-    public ResponseEntity<Void> putUsuarioV1(String id, UpdateUsuarioRequestDTO updateUsuarioRequestDTO) {
+    public ResponseEntity<Void> putUsuarioV1(UpdateUsuarioRequestDTO updateUsuarioRequestDTO) {
+        usuarioService.updateUsuario(updateUsuarioRequestDTO);
         return new ResponseEntity<>(HttpStatus.OK);
     }
+
+    public ResponseEntity<Void> deleteUsuario(String id) {
+        usuarioService.deleteUsuario(id);
+        return new ResponseEntity<>(HttpStatus.OK);
+
+    }
+
+
 }
