# src/main/resources/swagger/openapi.yaml
@@ -55,13 +55,57 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
-  /v1/usuario/{id}:
+  /v1/usuario/editar:
     put:
-      summary: API de inclusão de novo usuário
+      summary: API de edição de usuário
       description: Para utilizar as APIs é necessário logar e pegar um token.
       tags:
         - Usuario
       operationId: putUsuarioV1
+      requestBody:
+        description: Edição de usuário.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUsuarioRequestDTO'
+
+      responses:
+        '200':
+          description: Success response
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /v1/usuario/editar/foto:
+    put:
+      summary: API de edição de usuário
+      description: Para utilizar as APIs é necessário logar e pegar um token.
+      tags:
+        - Usuario
+      operationId: putUsuarioFotoPerfilV1
+      requestBody:
+        description: Edição de usuário.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUsuarioFotoPerfilRequestDTO'
+
+      responses:
+        '200':
+          description: Success response
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /v1/usuario/deletar/{id}:
+    delete:
+      summary: API de edição de usuário
+      description: Para utilizar as APIs é necessário logar e pegar um token.
+      tags:
+        - Usuario
+      operationId: deleteUsuario
       parameters:
         - name: id
           in: path
@@ -69,14 +113,7 @@ paths:
           description: ID do usuário a ser atualizado.
           schema:
             type: string
-            example: "123"
-      requestBody:
-        description: Cadastro de novo usuario.
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateUsuarioRequestDTO'
+            example: "4571e640-6d5e-48b5-8f26-29a90645a240"
 
       responses:
         '200':
@@ -211,6 +248,10 @@ components:
     UpdateUsuarioRequestDTO:
       type: object
       properties:
+        id:
+          description: Id do usuário.
+          type: string
+          example: 'fswfwefwe23ffasdfwe4r2dqw1'
         nome:
           description: Nome de usuário.
           type: string
@@ -223,11 +264,38 @@ components:
           description: Informe um e-mail valido.
           type: string
           example: 'notifyme@teste.com'
+        cpf:
+          description: Informe o cpf valido.
+          type: string
+          example: '999.999.999-99'
+        password:
+          description: Informe um novo password.
+          type: string
+          example: '********'
+        role:
+          description: Informe uma Role.
+          type: string
+          example: 'ADMIN'
+        status:
+          description: Informe uma Role.
+          type: integer
+          example: '1'
       required:
-        - nome
-        - email
-        - telefone
-        - password
+        - id
+    UpdateUsuarioFotoPerfilRequestDTO:
+      type: object
+      properties:
+        id:
+          description: Id do usuário.
+          type: string
+          example: 'fswfwefwe23ffasdfwe4r2dqw1'
+        foto:
+          description: Foto de Perfil de usuário.
+          type: string
+          example: 'https://editor.swagger.io/'
+      required:
+        - id
+        - foto
 
     CepResponseDTO:
       type: object
